--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -25,3 +25,11 @@
   <div [routerLink]="['/title', title.id]">{{title.name}}</div>
 </li>
 </ul>
+
+
+
+<br />
+
+<h1>Create Title</h1>
+<a [routerLink]="['/createtitle']">Create Now</a>
+<br />
