--- a/src/app/mod_create_title/create_title.component.html
+++ b/src/app/mod_create_title/create_title.component.html
@@ -5,5 +5,5 @@
     <br/>
     <br/>
     <button type="submit">Save</button>
-    <button type="button">Cancel</button>
+    <button type="button" (click)="cancelClick()">Cancel</button>
 </div>
